--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -1,5 +1,20 @@
 .Home {
-  text-align: center;
-  font-size: 100px;
-  color: #8ec6c5;
+  width: 50%;
+  margin: 0 auto;
+}
+.Home header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 3px solid black;
+}
+.Home footer{
+  position: relative;
+  top: 750px;
+  border-top: 3px solid black;
+}
+.Home footer div{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
