--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+@import url('https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css');
 
 body {
-  background-color: #f4f9f4;
-  font-family: 'Nunito', sans-serif;
+  background-color: #f7f7f7;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 20px;
 }
