--- a/src/app/views/search/Style.css
+++ b/src/app/views/search/Style.css
@@ -1,36 +1,40 @@
 .Search{
   display: flex;
   flex-direction: column;
-}
-.Search .books{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.Search .books .book{
-  width:230px;
-  height: 280px;
-  border: 3px solid black;
-  margin: 20px;
-  padding: 5px;
-  text-align: justify;
-  display: flex;
-  align-items: stretch;
-  justify-content: center;
-  /* overflow: hidden; */
-  /* word-wrap: break-word; */
-}
-.Search .books .book img{
-  position:relative;
-  left: -25px;
-  border: 3px solid #ff6161;
-  box-shadow: 5px 5px 0 #ccc;
-}
-.Search .books .book div{
-  display: flex;
-  flex-direction: column;
-}
-.Search .books .book div span{
-  display: flex;
-  justify-content: center;
+
+  .books{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .book{
+      width:230px;
+      height: 280px;
+      border: 3px solid black;
+      margin: 20px;
+      padding: 5px;
+      text-align: justify;
+      display: flex;
+      align-items: stretch;
+      justify-content: center;
+      /* overflow: hidden; */
+      /* word-wrap: break-word; */
+      img{
+        position:relative;
+        left: -25px;
+        border: 3px solid #ff6161;
+        box-shadow: 5px 5px 0 #ccc;
+      }
+
+      div{
+        display: flex;
+        flex-direction: column;
+
+        span{
+          display: flex;
+          justify-content: center;
+        }
+      }
+    }
+  }
 }
