--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -18,3 +18,9 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 480px){
+  .Home{
+    width: 80%;
+  }
+}
