--- a/src/app/components/button/Link.css
+++ b/src/app/components/button/Link.css
@@ -8,6 +8,7 @@
   text-decoration: none;
   align-items: center;
   background-color: black;
+  font-size: 20px;
 }
 .Hover{
   text-decoration: none;
