--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -1,8 +1,16 @@
 .Home {
   width: 100%;
+  /* height: 100vh; */
   margin: 0 auto;
   padding: 0 10px;
   font-size: 2vw;
+}
+.Home .body {
+  /* height: 50vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .Home header{
   display: flex;
