--- a/src/app/views/sign/Style.css
+++ b/src/app/views/sign/Style.css
@@ -1,5 +1,6 @@
 .IO{
-  height: 72vh;
+  /* height: 72vh; */
+  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
   align-items: center;
