--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -3,13 +3,13 @@
   /* height: 100vh; */
   margin: 0 auto;
   padding: 0 10px;
-  font-size: 2vw;
+  font-size: 100px;
 }
 .Home .body {
   /* height: 50vh; */
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 .Home header{
@@ -32,6 +32,7 @@
 @media screen and (min-width: 481px) and (max-width: 1023px){
   .Home{
     width: 80%;
+    font-size: 2vw;
   }
 }
 
@@ -39,5 +40,13 @@
 @media screen and (min-width: 1024px){
   .Home{
     width: 50%;
+    font-size: 1vw;
   }
+}
+
+img{
+  position: relative;
+  top: -15px;
+  border: 1px solid grey;
+  box-shadow: 8px 15px 0 rgba(0,0,0,0.1);
 }
