--- a/src/app/views/search/Style.css
+++ b/src/app/views/search/Style.css
@@ -2,9 +2,29 @@
   display: flex;
   flex-direction: column;
 
-  &>div{
-    display: flex;
-    /* flex-wrap: wrap;
-    justify-content: center; */
-  }
+}
+.Search .legends{
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  border: 1px solid black;
+}
+.Search .books{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.Search .books div{
+  margin: 30px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-bottom: 6px solid black;
+  border-right: 1px solid black;
+}
+.Search .books div .btns{
+  border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
