--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -3,14 +3,15 @@
   /* height: 100vh; */
   margin: 0 auto;
   padding: 0 10px;
-  font-size: 100px;
+  font-size: 10vw;
 }
 .Home .body {
+  padding-top: 25px;
   /* height: 50vh; */
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: center; */
 }
 .Home header{
   display: flex;
@@ -32,7 +33,7 @@
 @media screen and (min-width: 481px) and (max-width: 1023px){
   .Home{
     width: 80%;
-    font-size: 2vw;
+    font-size: 5vw;
   }
 }
 
@@ -40,13 +41,6 @@
 @media screen and (min-width: 1024px){
   .Home{
     width: 50%;
-    font-size: 1vw;
+    font-size: 2vw;
   }
-}
-
-img{
-  position: relative;
-  top: -15px;
-  border: 1px solid grey;
-  box-shadow: 8px 15px 0 rgba(0,0,0,0.1);
 }
