--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -1,9 +1,7 @@
 .Home {
-  width: 100%;
-  /* height: 100vh; */
+  width: 80%;
   margin: 0 auto;
-  padding: 0 10px;
-  font-size: 10vw;
+  font-size: 20px;
 }
 .Home .body {
   padding-top: 25px;
@@ -29,18 +27,17 @@
   align-items: center;
 }
 
-/* TABLETS */
-@media screen and (min-width: 481px) and (max-width: 1023px){
-  .Home{
-    width: 80%;
-    font-size: 5vw;
-  }
+.bx-code, .bx-code-alt{
+  font-size: 200px;
+  color: rgba(0,0,0,0.02);
+  position: fixed;
+  z-index: -1;
 }
-
-/* DESKTOPS */
-@media screen and (min-width: 1024px){
-  .Home{
-    width: 50%;
-    font-size: 2vw;
-  }
+.bx-code{
+  top: 0;
+  left: 0;
+}
+.bx-code-alt{
+  right: 0;
+  bottom: 0;
 }
