--- a/src/app/views/search/Style.css
+++ b/src/app/views/search/Style.css
@@ -18,6 +18,7 @@
 }
 .Search .books div img{
   position: relative;
+  width: 90%;
   top: -15px;
   border: 1px solid grey;
   box-shadow: 8px 15px 0 rgba(0,0,0,0.1);
@@ -29,5 +30,5 @@
   align-items: center;
 }
 .Search .books div .btns span{
-  font-size: 2vw;
+  font-size: 50px;
 }
